<resources>
    <string name="app_name">MoveUp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Main Activity -->
    <string name="mainview_task_add">+</string>

    <!-- Edit Activity -->
    <string name="editview_cancel">取消</string>
    <string name="editview_finish">完成</string>
    <string name="editview_task_lable">任务名: </string>
    <string name="editview_times_lable">次 数: </string>
    <string name="editview_time_lable">时 间: </string>
    <string name="editview_note_lable">备 注: </string>

    <!-- Active Task Activity -->
    <string name="activetaskview_time">计时: </string>
    <string name="activetaskview_times">计数(需要手动输入): </string>
    <string name="activetaskview_start">开始</string>
    <string name="activetaskview_end">结束</string>

    <!-- Task Chart Activity -->
    <string name="taskchartview_back">返回</string>
    <string name="taskchartview_week">周</string>
    <string name="taskchartview_month">月</string>
    <string name="taskchartview_year">年</string>
</resources>
